# ballot-location

./: .env.example  .env.tpl  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml  fnox.toml  justfile  map.ipynb  mise.toml  pyproject.toml
.dvc/: config
EDA/: 01_inspect_ect_quality.ipynb  04_advance_voting_stations.ipynb
ETL/: 02_transform_ect.ipynb  04_geocode_complete.ipynb  06_ner_locations.ipynb
Tasks/1_OCR_Fax/: README.md
Tasks/2_Hunt_PDF/: README.md
data/: .gitignore  DTO.py  EDA_compare_complete_vote62.ipynb  ETL-complete-geocoder.ipynb  ETL-complete-json.ipynb  SHP ECT attributes.dvc  Tambon.dvc  ballot_complete.csv.dvc  ballot_complete_clean.csv.gz.dvc  compare_complete_vote62_2.xlsx.dvc  geocoder_refined.ipynb  province2region.json.dvc  provinceRegion2unit.json.dvc  regions_clean.csv.dvc  sample_geocoded.json.dvc  sample_geocoded.pkl.gz.dvc  sample_geocoded.xlsx.dvc  sample_geojson_payload.json.dvc  sample_payload.json.dvc  tambon_DOL_utf8.gpkg.dvc
data/complete/: ETL-complete-json.ipynb  geocoder_refined.ipynb
data/ect/: .gitignore  BatchInspector.ipynb  ETL_FixLocation.ipynb  cannot_find_tambon_polygon.csv.dvc  ect.csv.dvc  ect.parquet.dvc  ect_api_result.pkl.dvc  ect_batch_1.csv.dvc  ect_batch_1.json.dvc  ect_batch_1.pkl.dvc  ect_batch_2.csv.dvc  (+11 more)
docs/: DVC_WORKFLOW.md
ect66-geo-decoding/: CHANGELOG.md  DATA_SOURCES.md  README.md  TIER_SYSTEM.md
ect69-geo-decoding/: .cache.dvc  README.md
notes/: kepler_convention.md
scripts/: audit_large_files.py
toys/: 01_test_geocoder_api.ipynb  03_test_server_upload.ipynb
(+62 files in other folders)
